fixed rotational vid for large screens - gap removed

--- a/css/style.css
+++ b/css/style.css
@@ -389,6 +389,10 @@ h1, h2, h3, h4, h5, h6 {
   align-items: flex-end;
 }
 
+.hero--short .hero__content {
+  margin-top: auto;
+}
+
 .hero--dark {
   background: #000;
 }
@@ -1550,7 +1554,7 @@ h1, h2, h3, h4, h5, h6 {
   max-width: 800px;
   margin-left: auto;
   display: flex;
-  align-items: center;
+  align-items: stretch;
   overflow: hidden;
 }
 
